WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141636
Develop/Disable Caches does not properly disable disk cache
https://bugs.webkit.org/show_bug.cgi?id=141636
Summary
Develop/Disable Caches does not properly disable disk cache
Antti Koivisto
Reported
2015-02-16 01:36:15 PST
This uses cache model which is not passed to the network process.
Attachments
patch
(4.07 KB, patch)
2015-02-16 01:58 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
with test
(15.77 KB, patch)
2015-02-16 05:20 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2015-02-16 01:37:52 PST
<
rdar://problem/19786151
>
Antti Koivisto
Comment 2
2015-02-16 01:58:47 PST
Created
attachment 246639
[details]
patch
Antti Koivisto
Comment 3
2015-02-16 05:20:27 PST
Created
attachment 246648
[details]
with test
WebKit Commit Bot
Comment 4
2015-02-16 09:17:49 PST
Comment on
attachment 246648
[details]
with test Clearing flags on attachment: 246648 Committed
r180149
: <
http://trac.webkit.org/changeset/180149
>
WebKit Commit Bot
Comment 5
2015-02-16 09:17:53 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6
2015-02-16 11:13:48 PST
Comment on
attachment 246648
[details]
with test View in context:
https://bugs.webkit.org/attachment.cgi?id=246648&action=review
> LayoutTests/http/tests/cache/resources/cache-test.js:104 > + }, 100);
This is unlikely to be the right thing. Nothing in the tests can ever be guaranteed to take 100ms at most. On a busy machine, and with hyperthreading, there are a lot longer delays.
Antti Koivisto
Comment 7
2015-02-16 11:27:39 PST
(In reply to
comment #6
)
> > LayoutTests/http/tests/cache/resources/cache-test.js:104 > > + }, 100); > > This is unlikely to be the right thing. Nothing in the tests can ever be > guaranteed to take 100ms at most. On a busy machine, and with > hyperthreading, there are a lot longer delays.
There shouldn't be anything timing dependent in cache operations anymore. If this makes the test flaky then that indicates a bug.
Antti Koivisto
Comment 8
2015-02-16 11:29:51 PST
I still keep some delay so that we don't end up testing the in-memory write cache only.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug