Develop/Disable Caches does not properly disable disk cache https://bugs.webkit.org/show_bug.cgi?id=141636

Reviewed by Anders Carlsson.

Source/WebKit2:

The menu item sets the cache model to "document viewer" to disable the caches (cache size 0).
However the cache model was never passed to the network process after the initialization.

* NetworkProcess/NetworkProcess.messages.in:
* NetworkProcess/cache/NetworkCacheStorageCocoa.mm:
(WebKit::NetworkCacheStorage::retrieve):
(WebKit::NetworkCacheStorage::store):
(WebKit::NetworkCacheStorage::update):

    Don't try to store or retrieve when the maximum cache size is set to zero.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::setCacheModel):

   Message the network process too.

* WebProcess/InjectedBundle/API/c/WKBundle.cpp:
(WKBundleSetCacheModel): Deleted.

    Remove the now unused SPI.

* WebProcess/InjectedBundle/API/c/WKBundlePrivate.h:

Tools:

Make testRunner.setCacheModel() use the WKContext interface so the model gets passed to
the network process too.

This makes setCacheModel asynchronous but there don't seem to be any tests that expect otherwise.

* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::beginTesting):
(WTR::InjectedBundle::setCacheModel):
* WebKitTestRunner/InjectedBundle/InjectedBundle.h:
* WebKitTestRunner/InjectedBundle/TestRunner.cpp:

    Forward to TestController.

(WTR::TestRunner::setCacheModel):
* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveMessageFromInjectedBundle):

LayoutTests:

* http/tests/cache/disk-cache-disable-expected.txt: Added.
* http/tests/cache/disk-cache-disable.html: Added.
* http/tests/cache/resources/cache-test.js:
(runTests): Add optional completion handler.


Canonical link: https://commits.webkit.org/159670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180149 268f45cc-cd09-0410-ab3c-d52691b4dbfc