Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.h
@@ -101,6 +101,9 @@ public:
     // Page Visibility.
     void setHidden(bool);
 
+    // Cache.
+    void setCacheModel(int);
+
     // Work queue.
     bool shouldProcessWorkQueue() const;
     void processWorkQueue();
